[package]
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
name = "basiliq"
version = "0.1.1"
description = "REST API server exposing a Postgres database using JSON:API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/basiliqio/basiliq"
[features]
better_cli = ["clap/suggestions", "clap/wrap_help", "clap/color"]

[dependencies]
clap = {version = "2", features = ["yaml"]}
tracing = { version = "0.1", features = [ "log" ] }
tracing-log = { version = "0.1", features = [ "env_logger" ] }
tracing-subscriber = { version = "0.2.17", features = ["json", "fmt", "chrono" ] }
getset = "0.1"
hyper = {version = "0.14", features = ["full"]}
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
trust-dns-resolver = {version = "0.20", features = ["tokio", "dns-over-rustls", "dns-over-https-rustls", "mdns", "ipconfig"]}
url = "2.2.0"
bytes = { version = "1"}
casey = "0.3.3"
paste = "1.0"
uuid = "0.8"
serde_urlencoded = "0.7"
buf_redux = { version = "0.8" }
num_cpus = "1.13.0"
futures = "0.3"
itertools = "0.10.0"
bimap = "0.6.0"
arcstr = "1"

[dependencies.ciboulette2pg]
# git = "https://github.com/basiliqio/ciboulette2pg.git"
# branch = "main"
version = "0.1"
package = "ciboulette2pg"

[dependencies.ciboulette]
features = ["sqlx_postgres"]
version = "0.1"
# branch = "main"
# git = "https://github.com/basiliqio/ciboulette.git"
package = "ciboulette"

[dependencies.messy_json]
# git = "https://github.com/basiliqio/messy_json.git"
version = "0.2"
features = ["uuid"]

[dependencies.lazy_static]
version = "1.4"

[dev-dependencies]
basiliq_db_test_utils = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git", branch = "main", package = "basiliq_db_test_utils" }
basiliq_db_test_proc_macro = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git", branch = "main", package = "basiliq_db_test_proc_macro" }
insta = { version = "1.7", features = [ "redactions" ] }
