[package]
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
name = "basiliq_store"
version = "0.1.0"
[dependencies]
bimap = "0.6.0"
getset = "0.1.1"
itertools = "0.10.0"
log = "0.4.11"
serde = "1"
serde_json = "1"
src = "*"
thiserror = "1"
arcstr = "1"

[dependencies.ciboulette]
features = ["sqlx_postgres"]
git = "https://github.com/basiliqio/ciboulette.git"
branch = "main"
# path = "../../ciboulette"
package = "ciboulette"

[dependencies.ciboulette2postgres]
git = "https://github.com/basiliqio/ciboulette2postgres.git"
branch = "main"
# path = "../../ciboulette2postgres"
package = "ciboulette2postgres"

[dependencies.messy_json]
# git = "https://github.com/basiliqio/messy_json.git"
version = "0.2"
features = ["uuid"]

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "postgres", "uuid", "json"]
version = "0.5"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"

[dev-dependencies]
anyhow = "1"
env_logger = "0.8"
basiliq_db_test_utils = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git", branch = "main", package = "basiliq_db_test_utils" }
basiliq_db_test_proc_macro = { git = "https://github.com/basiliqio/basiliq_db_test_utils.git",  branch = "main", package = "basiliq_db_test_proc_macro" }

[dev-dependencies.cargo-husky]
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
version = "1"

[dev-dependencies.insta]
version = "1.7"
