[package]
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
name = "basiliq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
better_cli = ["clap/suggestions", "clap/wrap_help", "clap/color"]

[dependencies]
basiliq_database_scanner = {version = "*", path = "../basiliq-database-scanner", package = "basiliq_database_scanner"}
clap = {version = "2", features = ["yaml"]}
tracing = { version = "0.1", features = [ "log" ] }
tracing-log = { version = "0.1", features = [ "env_logger" ] }
tracing-subscriber = { version = "0.2.17", features = ["json", "fmt", "chrono" ] }
getset = "0.1"
hyper = {version = "0.14", features = ["full"]}
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
trust-dns-resolver = {version = "0.20", features = ["tokio", "dns-over-rustls", "dns-over-https-rustls", "mdns", "ipconfig"]}
url = "2.2.0"
bytes = { version = "1"}
casey = "0.3.3"
paste = "1.0"
uuid = "0.8"
serde_urlencoded = "0.7"
buf_redux = { version = "0.8" }

[dependencies.ciboulette2postgres]
git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
# path = "../../ciboulette2postgres"
package = "ciboulette2postgres"

[dependencies.ciboulette]
features = ["sqlx_postgres"]
git = "https://gitlab.com/basiliq/ciboulette.git"
# path = "../../ciboulette"
package = "ciboulette"
