[package]
name = "ciboulette2sql"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciboulette = { path = "../../ciboulette" }
quaint = { git = "https://github.com/prisma/quaint.git", features = ["postgresql", "uuid", "chrono", "serde-support", "bigdecimal", "json"] }
thiserror = "1"
messy_json = { git = "https://gitlab.com/basiliq/messy_json.git"}
serde_json = { version = "1.0", default-features = false, features = ["raw_value"] }
bigdecimal = "0.2"
petgraph = { version = "0.5.1", default-features = false }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "json", "macros", "uuid", "chrono", "bigdecimal" ] }

[dev-dependencies]
ciboulette_test_helper = { path = "../../ciboulette/ciboulette_test_helper" }
url = "2.2.0"
tokio = { version = "1", features = ["full"] }
